# Percepteme-Model-ROS2-Implementation

./: .gitignore  INSTRUCCIONES.md  README.md  msg_PerceptemaAction_Version3.msg  msg_PerceptemaStimulus_Version3.msg  perceptema_bringup_package.xml  perceptema_core_package.xml  perceptema_io_package.xml  requirements.txt  requirements_Version3.txt
src/perceptema_bringup/: CMakeLists.txt  package.xml
src/perceptema_core/: CMakeLists.txt  package.xml
src/perceptema_core/msg/: PerceptemaState.msg
src/perceptema_io/: package.xml
