<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perceptema_bringup</name>
  <version>2.0.0</version>
  <description>Archivos de lanzamiento para el sistema Perceptema One.</description>
  <maintainer email="eulosoys@gmail.com">eulosoys-droid</maintainer>
  <license>Apache-2.0</license>

<build_depend>ament_cmake</build_depend>

  <exec_depend>perceptema_core</exec_depend>
  <exec_depend>perceptema_io</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>